# desafio

./: .gitignore
app_code/: CMakeLists.txt  bash.sh  main.cpp
docker_env/: Dockerfile  compose.yaml  run_docker.sh
